# DoppelTest4AW

./: .gitignore  README.md  environment.yml  pyproject.toml  start.sh
autoware_controller/: decision_counter.py  receiver.py  sender.py
autoware_controller/receiver_app/: __init__.py  analysis.py  app.py  config.py  endpoints.py  logging_setup.py  models.py  processes.py  publishers.py  ros_lifecycle.py  state.py
autoware_controller/violation_analyser/: config.py  run_analyzer.py
autoware_controller/violation_analyser/environment/: MapLoader.py
autoware_controller/violation_analyser/objectives/violation_number/oracles/: OracleHelper.py  OracleManager.py  __init__.py
autoware_controller/violation_analyser/objectives/violation_number/oracles/impl/: CollisionOracle.py  JunctionLaneChangeOracle.py  ModuleOracle.py  SpeedingOracle.py  StopSignOracle.py  TrafficSignalOracle.py  UnsafeLaneChangeOracle.py
autoware_controller/violation_analyser/tools/: utils.py
autoware_controller/violation_analyser/tools/autoware_tools/: rosbag_reader.py
autoware_controller/violation_analyser/tools/hdmap/: VectorMapParser.py
autoware_launch/scripts/: dev_into.sh  dev_start.sh  kill_all.sh
autoware_map/BorregasAve/: lanelet2_map.osm
autoware_map/sample-map-planning/: lanelet2_map.osm
scenario_runner/: __init__.py  test_main.py
scenario_runner/framework/scenario/: PedestrianManager.py  ScenarioRunner.py  TrafficControlManager.py  ad_agents.py  pd_agents.py  tc_config.py
scenario_runner/hdmap/: MapParser.py  __init__.py
