[project]
name = "doppeltest4aw"
version = "0.1.0"
description = "Autoware implementation of DoppelTest for multi-vehicle scenario generation and execution."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "deap==1.3.1",
  "networkx==2.5.1",
  "numpy==1.21.0",
  "requests>=2.28,<3",
  "Shapely==1.7.1",
  "rocker",
]

[tool.uv]
package = false

[tool.uv.sources]
rocker = { path = "autoware_launch/rocker", editable = true }
